refactor for jit/nojit testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,15 @@
 [tox]
-envlist = py36,py37
+envlist = py{36,37}-{jit,nojit}
 
 [testenv]
 deps = -r requirements.txt
 usedevelop = true
+setenv =
+    py{36,37}-nojit: NUMBA_DISABLE_JIT=1
 commands =
     flake8 --max-line-length=88 src tests setup.py
-    pytest -vv --cov=skallel --ignore=src
-    coverage report -m
+    # for coverage, run tests without numba jit compilation
+    py{36,37}-nojit: pytest -vv --cov=skallel --ignore=src
+    py{36,37}-nojit: coverage report -m
+    # also run tests with numba jit compilation
+    py{36,37}-jit: pytest -vv --ignore=src
