--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ usedevelop = true
 setenv =
     py{36,37}-nojit: NUMBA_DISABLE_JIT=1
 commands =
-    flake8 --max-line-length=88 src tests setup.py
+    flake8 --max-line-length=88 src tests benchmarks setup.py
     # for coverage, run tests without numba jit compilation
     py{36,37}-nojit: pytest -vv --cov=skallel --ignore=src
     py{36,37}-nojit: coverage report -m
