--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ setenv =
 commands =
     flake8 --max-line-length=88 src tests benchmarks setup.py
     # for coverage, run tests without numba jit compilation
-    py{36,37}-nojit: pytest -vv --cov=skallel --ignore=src
+    py{36,37}-nojit: pytest -vv --cov=skallel --cov-fail-under=100 --ignore=src
     py{36,37}-nojit: coverage report -m
     # also run tests with numba jit compilation
     py{36,37}-jit: pytest -vv --ignore=src
