--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # library requirements
 numba==0.44.0
 numpy==1.16.4
-dask[array]==2.0.0
+dask[complete]==2.0.0
+pandas==0.24.2
 # test requirements
 tox==3.12.1
 pytest==4.6.3
