--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,9 @@ setenv =
     # disable JIT to get coverage
     py{36,37}-cov: NUMBA_DISABLE_JIT=1
 commands =
-    flake8 --max-line-length=88 src tests benchmarks setup.py
+    flake8 --max-line-length=88 src benchmarks setup.py
     # for coverage, run tests without numba jit compilation
-    py{36,37}-cov: pytest -vv --cov=skallel --cov-fail-under=100 --ignore=src
+    py{36,37}-cov: pytest -vv --cov=skallel_tensor --cov-fail-under=100 --ignore=src --pyargs skallel_tensor
     py{36,37}-cov: coverage report -m
     # also run tests with numba jit compilation
-    py{36,37}-jit pytest -vv --ignore=src
+    py{36,37}-jit: pytest -vv --ignore=src --pyargs skallel_tensor
