Features, refactoring and renaming 20190709 (#19)
* some allele counts functions

* add prange

* prange

* rename 2d/3d

* keyword only arguments

* drop prange

* add 2d genotypes functions; some renaming

* add some 3d allele coutns functions

* style change

* wip allele counts

* WIP various refactoring around allele counts

* back to tests passing

* slim down allele counts; jit on demand

* rework tests

* include asv dev in tox and ci so we know if benchmarks break

* tweak asv tox

* tidy up

* comments

--- a/tox.ini
+++ b/tox.ini
@@ -14,3 +14,6 @@ commands =
     py{36,37}-cov: coverage report -m
     # also run tests with numba jit compilation
     py{36,37}-jit: pytest -vv --ignore=src --pyargs skallel_tensor
+    # check asv benchmarks run
+    py37-jit: asv machine --machine tox --os unknown --arch unknown --cpu unknown --ram unknown
+    py37-jit: asv dev --machine tox
