run with cuda simulator

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@ usedevelop = true
 setenv =
     # disable JIT to get coverage
     py{36,37}-cov: NUMBA_DISABLE_JIT=1
+    # run tests with cuda simulator
+    NUMBA_ENABLE_CUDASIM=1
 commands =
     flake8 --max-line-length=88 src benchmarks setup.py
     # for coverage, run tests without numba jit compilation
